test/studies/hpcc/RA/bradc/ra-condexpr.good
ra-condexpr.chpl:5: In function 'getNextRand':
ra-condexpr.chpl:9: error: illegal use of '^' on operands of type uint(64) and int
